--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="FortuneShelf" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta property="og:title" content="FortuneShelf" />
+  <meta property="og:url" content="https://www.fortuneshelf.com/" />
+  <meta property="og:description" content="Fortune Shelf is a small contribution towards this bigger cause by delivering amazing spiritual enlightening books to every house across every corner of India.">
+  <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
