social media unfurling

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="FortuneShelf" />
+  <meta name="description" content="Fortune Shelf is a small contribution towards this bigger cause by delivering amazing spiritual enlightening books to every house across every corner of India." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta property="og:title" content="FortuneShelf" />
   <meta property="og:url" content="https://www.fortuneshelf.com/" />
